# spatial_etl_app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
etl_app/: Dockerfile  alembic.ini  app.py  env.py
etl_app/data/: fakedata.csv
etl_app/models/: models.py
etl_app/versions/: 1b9591aa6287_added_spatial_data_table.py  8261e3378fff_adding_org_id_to_the_spatial_data_table.py
server_app/: Dockerfile  main.py
server_app/config/: database.py
server_app/models/: spatial_locations.py
server_app/routes/: spatial_endpoints.py
server_app/services/: spatial_locations.py
server_app/tests/: test_services.py
