[tool.poetry]
name = "spatial-etl-app"
version = "0.1.0"
description = ""
authors = ["geotechblogs <ahernandez021985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
geoalchemy2 = "^0.14.3"
geopandas = "^0.14.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
