[tool.poetry]
name = "spatial-etl-app"
version = "0.1.0"
description = ""
authors = ["geotechblogs <ahernandez021985@gmail.com>"]
readme = "README.md"
packages = [
    { include = "spatial_etl_app" }
]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
geoalchemy2 = "^0.14.3"
geopandas = "^0.14.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
fiona = "^1.9.5"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
